--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,110 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Sit on Chair</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div id="branding">
+                <h1><a href="#">sit on chair</a></h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">o firmie</a></li>
+                    <li><a href="#">galeria</a></li>
+                    <li><a href="#">kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="showcase">
+        <div class="container">
+            <div class="arrow left">
+                &lt;
+            </div>
+            <div class="main-img"></div>
+            <div class="main-description">
+                <h2>sit on our chair</h2>
+                <p>
+                    Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna.
+                </p>
+                <button type="button" class="seeMore-btn">zobacz więcej</button>
+            </div>
+            <div class="arrow right">
+                &gt;
+            </div>
+        </div>
+    </section>
+
+    <section id="products">
+        <div class="container">
+            <div class="product-box">
+                <div class="product-title">
+                    <h4>Chair CLAIR</h4>
+                </div>
+            </div>
+            <div class="product-box">
+                <div class="product-title">
+                    <h4>Chair MARGARITA</h4>
+                </div>
+            </div>
+            <div class="product-box">
+                <h4>Finds all inputs</h4>
+                <p>
+                    Finds all inputs that are not checked and highlights the next sibiling span. Notice there is no change when clicking the checkboxes since no click events have been linked.
+                </p>
+                <p>
+                    Notice there is no change when clicking the checkboxes since no click events have been
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="price-list">
+        <div class="container">
+            <div class="section-title">
+                <h3>cennik</h3>
+            </div>
+            <div class="product-option"></div>
+            <div class="product-option"></div>
+            <div class="product-option"></div>
+        </div>
+    </section>
+
+    <section id="contact-form">
+        <div class="container">
+            <div class="section-title">
+                <h3>kontakt</h3>
+            </div>
+            <form>
+                <input class="input-name" type="text" placeholder="Imię" name="name">
+                <input class="input-email" type="email" placeholder="email" name="email">
+                <textarea class="input-message" cols="30" rows="10" placeholder="Wiadomość" name="message"></textarea>
+                <div class="contact-img"></div>
+                <input id="checkbox" type="checkbox" name="checkbox" checked>
+                <label for="checkbox">
+                    Zgadzam się na przetwarzanie danych osobowych
+                </label>
+                <input id="form-btn" type="submit" value="wyślij" name="submit">
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>
+                Copyright 2014 | All Rights Reserved. - Sit On Chair
+            </p>
+            <a href="#"><img src="img/flickr.png" alt="flickr icon"></a>
+            <a href="#"><img src="img/vimeo.png" alt="vimeo icon"></a>
+            <a href="#"><img src="img/pinterest.png" alt="pinterest icon"></a>
+            <a href="#"><img src="img/twitter.png" alt="twitter icon"></a>
+            <h6>sit on chair</h6>
+        </div>
+    </footer>
 </body>
 </html>
