--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div id="branding">
-                <h1><a href="#">sit on chair</a></h1>
+                <h1><a href="#">sit <span>on</span> chair</a></h1>
             </div>
             <nav>
                 <ul>
