mobile first showcase

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="main-img"></div>
             <div class="main-description">
-                <h2>sit on our chair</h2>
+                <h2>sit <span>on</span> our <span>chair</span></h2>
                 <p>
                     Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna.
                 </p>
