mobile first products section

--- a/src/index.html
+++ b/src/index.html
@@ -44,17 +44,17 @@
 
     <section id="products">
         <div class="container">
-            <div class="product-box">
+            <div class="product-box chair-photo">
                 <div class="product-title">
                     <h4>Chair CLAIR</h4>
                 </div>
             </div>
-            <div class="product-box">
+            <div class="product-box children-photo">
                 <div class="product-title">
                     <h4>Chair MARGARITA</h4>
                 </div>
             </div>
-            <div class="product-box">
+            <div class="product-box product-description">
                 <h4>Finds all inputs</h4>
                 <p>
                     Finds all inputs that are not checked and highlights the next sibiling span. Notice there is no change when clicking the checkboxes since no click events have been linked.
