mobile first price box

--- a/src/index.html
+++ b/src/index.html
@@ -71,9 +71,47 @@
             <div class="section-title">
                 <h3>cennik</h3>
             </div>
-            <div class="product-option"></div>
-            <div class="product-option"></div>
-            <div class="product-option"></div>
+            <div class="options-box">
+                <div class="product-option side">
+                    <h5>basic plan</h5>
+                    <div class="price-circle">
+                        <span class="price">85<sup>99</sup></span>
+                        <span>pln/msc</span>
+                    </div>
+                    <ul>
+                        <li class="el-1">Zakup towaru + dowóz</li>
+                        <li class="el-2">Serwis</li>
+                    </ul>
+                    <button type="button" class="price-btn">dołącz</button>
+                </div>
+                <div class="product-option middle">
+                    <h5>standard plan</h5>
+                    <div class="price-circle">
+                        <span class="price">95<sup>99</sup></span>
+                        <span>pln/msc</span>
+                    </div>
+                    <ul>
+                        <li class="md-1">Zakup towaru + dowóz</li>
+                        <li class="md-2">Serwis</li>
+                        <li class="md-3">Gwarancja 5 lat</li>
+                    </ul>
+                    <button type="button" class="price-btn">dołącz</button>
+                </div>
+                <div class="product-option side">
+                    <h5>advance plan</h5>
+                    <div class="price-circle">
+                        <span class="price">211<sup>00</sup></span>
+                        <span>pln/msc</span>
+                    </div>
+                    <ul>
+                        <li class="el-1">Zakup towaru + dowóz</li>
+                        <li class="el-2">Serwis</li>
+                        <li class="el-3">Gwarancja 6 lat</li>
+                        <li class="el-4">Porady projektanta</li>
+                    </ul>
+                    <button type="button" class="price-btn">dołącz</button>
+                </div>
+            </div>
         </div>
     </section>
 
