mobile first layout finished

--- a/src/index.html
+++ b/src/index.html
@@ -145,11 +145,13 @@
             <p>
                 Copyright 2014 | All Rights Reserved. - Sit On Chair
             </p>
-            <a href="#"><img src="img/flickr.png" alt="flickr icon"></a>
-            <a href="#"><img src="img/vimeo.png" alt="vimeo icon"></a>
-            <a href="#"><img src="img/pinterest.png" alt="pinterest icon"></a>
-            <a href="#"><img src="img/twitter.png" alt="twitter icon"></a>
-            <h6>sit on chair</h6>
+            <div class="social-icons">
+                <a href="#"><img src="img/flickr.png" alt="flickr icon"></a>
+                <a href="#"><img src="img/vimeo.png" alt="vimeo icon"></a>
+                <a href="#"><img src="img/pinterest.png" alt="pinterest icon"></a>
+                <a href="#"><img src="img/twitter.png" alt="twitter icon"></a>
+            </div>
+            <h6>sit <span>on</span> chair</h6>
         </div>
     </footer>
 </body>
