layout for tablets

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
                     </ul>
                     <button type="button" class="price-btn">dołącz</button>
                 </div>
-                <div class="product-option side">
+                <div class="product-option side last">
                     <h5>advance plan</h5>
                     <div class="price-circle">
                         <span class="price">211<sup>00</sup></span>
