--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,11 @@
 
     <section id="showcase">
         <div class="container">
-            <div class="arrow left">
-                &lt;
+            <div class="arrow-box">
+                <div class="arrow left">
+                    &lt;
+
+                </div>
             </div>
             <div class="main-img"></div>
             <div class="main-description">
@@ -36,8 +39,11 @@
                 </p>
                 <button type="button" class="seeMore-btn">zobacz więcej</button>
             </div>
-            <div class="arrow right">
-                &gt;
+            <div class="arrow-box">
+                <div class="arrow right">
+                    &gt;
+
+                </div>
             </div>
         </div>
     </section>
