--- a/src/index.html
+++ b/src/index.html
@@ -125,20 +125,24 @@
                 <h3>kontakt</h3>
             </div>
             <form>
-                <input class="input input-name" type="text" placeholder="Imię" name="name">
-                <input class="input input-email" type="email" placeholder="email" name="email">
-                <textarea class="input input-message" cols="30" rows="10" placeholder="Wiadomość" name="message"></textarea>
-                <div class="contact-img">
-                    <img src="img/red_chair.png">
+                <div class="inputs-box">
+                    <input class="input input-name" type="text" placeholder="Imię" name="name">
+                    <input class="input input-email" type="email" placeholder="email" name="email">
+                    <textarea class="input input-message" cols="30" rows="10" placeholder="Wiadomość" name="message"></textarea>
                 </div>
-                <div class="checkbox-div">
-                    <label>
-                        <input id="checkbox" type="checkbox" name="checkbox">
-                        <span class="label-text">Zgadzam się na przetwarzanie danych osobowych</span>
-                    </label>
-                </div>
-                <div class="form-btn-box">
-                    <input id="form-btn" type="submit" value="wyślij" name="submit">
+                <div class="submit-box">
+                    <div class="contact-img">
+                        <img src="img/red_chair.png">
+                    </div>
+                    <div class="checkbox-div">
+                        <label>
+                            <input id="checkbox" type="checkbox" name="checkbox">
+                            <span class="label-text">Zgadzam się na przetwarzanie danych osobowych</span>
+                        </label>
+                    </div>
+                    <div class="form-btn-box">
+                        <input id="form-btn" type="submit" value="wyślij" name="submit">
+                    </div>
                 </div>
             </form>
         </div>
