--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <div class="main-description">
                 <h2>sit <span>on</span> our <span>chair</span></h2>
                 <p>
-                    Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna.
+                    Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie&nbsp;a, ultricies porta urna.
                 </p>
                 <button type="button" class="seeMore-btn">zobacz więcej</button>
             </div>
@@ -159,7 +159,7 @@
                 <a href="#"><img src="img/pinterest.png" alt="pinterest icon"></a>
                 <a href="#"><img src="img/twitter.png" alt="twitter icon"></a>
             </div>
-            <h6>sit <span>on</span> chair</h6>
+            <h6><a href="#">sit <span>on</span> chair</a></h6>
         </div>
     </footer>
 </body>
